--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-parser: flex.l bison.y
-	bison -d bison.y
-	flex flex.l
-	cc -o $@ bison.tab.c lex.yy.c -lfl
+parser: scanner.l parser.y parser.h funcs.c
+	bison -d parser.y && \
+	flex -oscanner.lex.c scanner.l && \
+	cc -g -o $@ parser.tab.c parser.h scanner.lex.c funcs.c -lm
